--- a/challege-front/src/screens/Home.css
+++ b/challege-front/src/screens/Home.css
@@ -11,6 +11,8 @@
     flex: 1;
 }
 
-.Title{
-    color: '#4076FA';
+.Title {
+    background-color: red;      
+    font-size: 42px;
+    color: white; 
 }
