router and redux created, done

--- a/challege-front/src/Styles.css
+++ b/challege-front/src/Styles.css
@@ -1,4 +1,14 @@
- 
+.Container{
+    flex:1;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.Banner-title{
+    background-color: #4076FA;
+    color: white;
+}
 
 
 
@@ -26,4 +36,8 @@
 
 .extra-dark{
     color: #091223;
+}
+
+.margin-default{
+    margin: 40px;
 }
