--- a/challege-front/src/Styles.css
+++ b/challege-front/src/Styles.css
@@ -10,6 +10,12 @@
     color: white;
 }
 
+.Background-Error {
+    background-color: #F15025;
+    padding: 100px;  
+    margin-top: 100px;
+}
+
 
 
 /* PADRAO EXIGIDO */
