--- a/challege-front/src/Styles.css
+++ b/challege-front/src/Styles.css
@@ -18,7 +18,7 @@
 
 
 
-/* PADRAO EXIGIDO */
+/* PADRAO */
 
 .primary {
     color: #4076FA;
@@ -40,8 +40,39 @@
     color: #001634;
 }
 
+
 .extra-dark{
     color: #091223;
+}
+
+.hero-text-rubik{
+    font-size: 42px;
+    font-family: 'Rubik', sans-serif;
+}
+
+.title-text-rubik{
+    font-size: 22px;
+    font-family: 'Rubik', sans-serif;
+}
+
+.body-text-rubik{
+    font-size: 18px;
+    font-family: 'Rubik', sans-serif;
+}
+
+.cta-text-rubik{
+    font-size: 14px;
+    font-family: 'Rubik', sans-serif;
+}
+
+.body-text-roboto{
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.title-text-roboto{
+    font-size: 27px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .margin-default{
