--- a/challege-front/src/components/ConsultContainer/ConsultContainer.css
+++ b/challege-front/src/components/ConsultContainer/ConsultContainer.css
@@ -4,6 +4,11 @@
     align-items: center;
 }
 
+.Container-Consult{
+    position: absolute;
+    margin-top: 50px;
+}
+
 .white{
     background-color: #fff;
 }
